--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
+        "express-fileupload": "^1.0.0",
         "google-auth-library": "^2.0.0",
         "jsonwebtoken": "^8.3.0",
         "mongoose-unique-validator": "^2.0.2",
-        "nodemon": "^1.18.4"
+        "nodemon": "^1.18.4",
+        "npm": "^6.4.1",
+        "serve-index": "^1.9.1"
     }
 }
