--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "express-fileupload": "^1.0.0",
         "google-auth-library": "^2.0.0",
         "jsonwebtoken": "^8.3.0",
+        "mongoose": "^5.3.11",
         "mongoose-unique-validator": "^2.0.2",
         "nodemon": "^1.18.4",
         "npm": "^6.4.1",
